create Auction fix

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts": "^4.2.0",
     "axios": "^0.21.1",
     "chai": "^4.3.4",
+    "cssnano": "^5.0.17",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.1",
     "hardhat": "^2.4.1",
