--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "react-dom": "17.0.2",
     "web3modal": "^1.9.3"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "eslint": "^8.10.0",
-    "eslint-config-next": "11.0.1",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+  // "devDependencies": {
+  //   "autoprefixer": "^10.2.6",
+  //   "eslint": "^8.10.0",
+  //   "eslint-config-next": "11.0.1",
+  //   "postcss": "^8.3.5",
+  //   "tailwindcss": "^2.2.4"
   }
 }
